hphp/hack/test/typecheck/nonnull/accessing_nonnull_as_array.php.exp
ERROR: File "accessing_nonnull_as_array.php", line 4, characters 8-16:
Typing error (Typing[4110])
  File "accessing_nonnull_as_array.php", line 4, characters 8-16:
  Expected an array that can be indexed
  File "accessing_nonnull_as_array.php", line 3, characters 12-18:
  But got `nonnull`
