hphp/hack/test/typecheck/nonnull/accessing_nonnull_as_array.php
<?hh // strict

function f(nonnull $x): void {
  $_ = $x['foo'];
}
